--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <div class="map">
             </div>
         </script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.11/vue.min.js" defer></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js" defer></script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANrwP97rB6-tun03pB8yY3NPd3di2BRTI" defer></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.14/vue.min.js" integrity="sha512-XdUZ5nrNkVySQBnnM5vzDqHai823Spoq1W3pJoQwomQja+o4Nw0Ew1ppxo5bhF2vMug6sfibhKWcNJsG8Vj9tg==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js" integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4OoGWthhdgvbys103MIEXd5we0_Rjh5E" defer></script>
         <script src="js/retail-store-map.js" defer></script>
     </body>
 </html>
